--- a/frontEndSrc/src/app/modules/call-tree-info-maintenance/call-tree-info-maintenance.component.html
+++ b/frontEndSrc/src/app/modules/call-tree-info-maintenance/call-tree-info-maintenance.component.html
@@ -22,7 +22,7 @@
         </ng-container>
         <ng-container matColumnDef="systemName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header="systemName">System</th>
-            <td mat-cell style="text-align: left !important;" *matCellDef="let element"> {{element.systemName}} </td>
+            <td mat-cell style="padding-left:3px;text-align: left !important;" *matCellDef="let element"> {{element.systemName}} </td>
         </ng-container>
         <ng-container matColumnDef="location">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Location</th>
@@ -97,3 +97,4 @@
     </td>
   </tr>
 </table>
+
