--- a/frontEndSrc/src/app/modules/call-tree-entry-maintenance/call-tree-editor/call-tree-editor.component.html
+++ b/frontEndSrc/src/app/modules/call-tree-entry-maintenance/call-tree-editor/call-tree-editor.component.html
@@ -5,9 +5,9 @@
     <tr>
       <td>Division:</td><td>System:</td>
     </tr>
-    <tr *ngFor="let callTreeInfo of callTreeInfoList">
-      <td>{{callTreeInfo.division}}</td>
-      <td>{{callTreeInfo.systemName}}</td>
+    <tr *ngFor="let callTreeEntry of callTreeEntryList">
+      <td>{{callTreeEntry.division}}</td>
+      <td>{{callTreeEntry.systemName}}</td>
     </tr>
   </table>
 
